Remove long deprecated and unsupported J2EE 1.3 JACC code.
Signed-off-by: arjantijms <arjan.tijms@gmail.com>